--- a/index.html
+++ b/index.html
@@ -378,10 +378,28 @@
             </div>
         </div>
         
+        <!-- Snake Game Section -->
+        <div class="snake-game-section">
+            <p class="snake-game-text">Still not sure? <a href="#" class="snake-game-link" id="snakeGameTrigger">Let's play some snake</a> while you think</p>
+        </div>
+        
         <footer class="minimal-footer">
             <p class="copyright">2026 Danilo. Premium Motion Design.</p>
         </footer>
     </section>
+
+    <!-- Snake Game Modal -->
+    <div class="snake-modal" id="snakeModal">
+        <div class="modal-backdrop"></div>
+        <div class="snake-modal-content">
+            <button class="modal-close" id="snakeModalClose">
+                <i data-lucide="x"></i>
+            </button>
+            <div class="snake-game-container" id="snakeGameContainer">
+                <!-- Game will be loaded here dynamically -->
+            </div>
+        </div>
+    </div>
 
     <!-- Video Modal -->
     <div class="video-modal" id="videoModal">
