update profile picture

--- a/index.html
+++ b/index.html
@@ -275,7 +275,10 @@
             <div class="process-visual">
                 <div class="process-portrait">
                     <div class="portrait-frame">
-                        <img src="me.png" alt="Danilo - Motion Designer" class="portrait-img" loading="lazy" decoding="async">
+                        <picture>
+                            <source srcset="me.webp" type="image/webp">
+                            <img src="me.png" alt="Danilo - Motion Designer" class="portrait-img" loading="lazy" decoding="async">
+                        </picture>
                         <div class="portrait-glow"></div>
                     </div>
                     <div class="motion-elements">
